--- a/index.org
+++ b/index.org
@@ -8,7 +8,8 @@
 #+begin_export html
 <div class="banner large">
   <div class="title">
-    <img src="/resources/img/org-mode-unicorn.svg"/>
+    <img src="/resources/img/org-mode-unicorn.svg"
+         alt="Org unicorn logo"/>
     <h2>
       Org-Mode
       <p class="subtitle">Convenient plain text markup and more</p>
@@ -29,24 +30,23 @@
   Created by <a target="new"
   href="https://staff.science.uva.nl/~dominik/">Carsten Dominik</a> in 2003,
   maintained by <a target="new" href="http://bzg.fr">Bastien Guerry</a> and
-  developed
-  by <a href="https://orgmode.org/org.html#History-and-Acknowledgments">many
-  others</a>.</p>
+  developed by
+  <a href="https://orgmode.org/org.html#History-and-Acknowledgments">many others</a>.</p>
   &ensp;
   <p>
   Support via&ensp;
   <a href="https://liberapay.com/bzg" title="Donations always help"
          style="color: #d9b217">
-    <img class="inline" src="/resources/img/external/librepay.svg"/>
+    <img class="inline" src="/resources/img/external/librepay.svg" alt="LibrePay logo"/>
     LibrePay</a>,
   <a href="https://github.com/sponsors/bzg" title="Donations always help"
      style="color: #222">
-    <img class="inline" src="/resources/img/external/github.svg"/>
+    <img class="inline" src="/resources/img/external/github.svg" alt="GitHub logo"/>
     GitHub</a>,
   or
   <a href="https://www.paypal.com/paypalme/bzg/10" title="Donations always help"
      style="color: #253b80">
-    <img class="inline" src="/resources/img/external/paypal.svg"/>
+    <img class="inline" src="/resources/img/external/paypal.svg" alt="Paypal logo"/>
     PayPal</a></p>
 </div>
 #+end_export
