--- a/tools.org
+++ b/tools.org
@@ -146,7 +146,7 @@ or textile.
 :HTML_CONTAINER_CLASS: columns
 :END:
 ** Drupal converter
-{{{link(drupal.org/project/orgmode)}}}
+{{{link(www.drupal.org/project/orgmode)}}}
 [[https://www.drupal.org/files/EL_blue_RGB%281%29.png]]
 
 A drupal module able to import single files, such as articles, and transform them
