--- a/ja/index.org
+++ b/ja/index.org
@@ -34,11 +34,11 @@
 
 ナイトリー版は、 [[https://orgmode.org/org-latest.tar.gz][tar.gz]] もしくは [[https://orgmode.org/org-latest.zip][zip]] をダウンロードしてください。
 
+- [[https://orgmode.org/worg/org-contribute.html][How to contribute?]]
 - [[file:features.org][Org-modeの特徴]]
 - [[#docs][マニュアルとチュートリアル]]
 - [[https://orgmode.org/worg/org-tools/index.html][Org tools (outside Emacs)]]
 - [[https://orgmode.org/worg/][Worg: community-written docs]]
-- [[https://orgmode.org/worg/org-contribute.html][How to contribute to Org?]]
 - [[https://orgmode.org/org.html#History-and-Acknowledgments][History and acknowledgements]]
 - [[file:talks.org][Org-modeについての講演]]
 - [[https://orgmode.org/community.html#gsoc][Google Summer of Code 2012]]（英語）
