--- a/index.org
+++ b/index.org
@@ -33,8 +33,22 @@
       projects, authoring documents, computational notebooks, literate
       programming, and more &mdash; in a fast and effective plain text
       system.</p>
+    <p class="bubble">
+      Support via&ensp;
+      <a href="https://liberapay.com/bzg" title="Donations always help"
+         style="color: #7d6f37">
+        <img class="inline" src="/resources/img/external/librepay.svg" alt="LibrePay logo"/>
+        LibrePay</a>,
+      <a href="https://github.com/sponsors/bzg" title="Donations always help"
+         style="color: #222">
+        <img class="inline" src="/resources/img/external/github.svg" alt="GitHub logo"/>
+        GitHub</a>,
+      or
+      <a href="https://www.paypal.com/paypalme/bzg/10" title="Donations always help"
+         style="color: #253b80">
+        <img class="inline" src="/resources/img/external/paypal.svg" alt="Paypal logo"/>
+        PayPal</a></p>
   </div>
-
   <meta itemprop="operatingSystem" content="Linux, MacOS, Windows">
   <meta itemprop="softwareVersion" content="9.3.8">
   <meta itemprop="datePublished" content="2020-08-07">
@@ -42,29 +56,13 @@
   <meta itemprop="screenshot" content="https://orgmode.tecosaur.com/resources/img/main.svg">
 </div>
 <div class="banner slim green inline">
-  <p>
+  <p style="width: 90vw">
     Created by
     <a target="new" href="https://staff.science.uva.nl/~dominik/">Carsten Dominik</a>
     in <a target="new" href="/manual/History-and-Acknowledgments.html">2003</a>,
     maintained by <a target="new" href="http://bzg.fr">Bastien Guerry</a>
     and developed by
     <a href="https://orgmode.org/org.html#History-and-Acknowledgments">many others</a>.</p>
-  &ensp;
-  <p>
-    Support via&ensp;
-    <a href="https://liberapay.com/bzg" title="Donations always help"
-       style="color: #d9b217">
-      <img class="inline" src="/resources/img/external/librepay.svg" alt="LibrePay logo"/>
-      LibrePay</a>,
-    <a href="https://github.com/sponsors/bzg" title="Donations always help"
-       style="color: #222">
-      <img class="inline" src="/resources/img/external/github.svg" alt="GitHub logo"/>
-      GitHub</a>,
-    or
-    <a href="https://www.paypal.com/paypalme/bzg/10" title="Donations always help"
-       style="color: #253b80">
-      <img class="inline" src="/resources/img/external/paypal.svg" alt="Paypal logo"/>
-      PayPal</a></p>
 </div>
 #+end_export
 
